<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kal_el.buscadorempresarial.BAvanzadaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelBAvanzada"
        android:id="@+id/textViewBAvanzada"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBARun"
        android:layout_below="@+id/textViewBAvanzada"
        android:layout_centerHorizontal="true"
        android:hint="@string/labelHintBARun" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBAApellido"
        android:hint="@string/labelHintBAApellido"
        android:layout_below="@+id/editTextBANombre"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBAMail"
        android:layout_below="@+id/editTextBAApellido"
        android:layout_centerHorizontal="true"
        android:hint="@string/labelHintBAMail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBATelefono"
        android:layout_below="@+id/editTextBAMail"
        android:layout_centerHorizontal="true"
        android:hint="@string/labelHintBATelefono" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBAPais"
        android:layout_below="@+id/editTextBATelefono"
        android:layout_alignRight="@+id/editTextBARun"
        android:layout_alignEnd="@+id/editTextBARun"
        android:hint="@string/labelHintBAPais" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBARegion"
        android:layout_below="@+id/editTextBAPais"
        android:layout_alignLeft="@+id/editTextBANombre"
        android:layout_alignStart="@+id/editTextBANombre"
        android:hint="@string/labelHintBARegion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBADireccion"
        android:layout_below="@+id/editTextBACiudad"
        android:layout_alignLeft="@+id/editTextBATelefono"
        android:layout_alignStart="@+id/editTextBATelefono"
        android:hint="@string/labelHintBADireccion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBACiudad"
        android:hint="@string/labelHintBACiudad"
        android:layout_below="@+id/editTextBARegion"
        android:layout_alignLeft="@+id/editTextBAApellido"
        android:layout_alignStart="@+id/editTextBAApellido" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextBANombre"
        android:hint="@string/labelHintBANombre"
        android:layout_below="@+id/editTextBARun"
        android:layout_alignLeft="@+id/textViewBAvanzada"
        android:layout_alignStart="@+id/textViewBAvanzada" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelEnviar"
        android:id="@+id/buttonBAvanzada"
        android:layout_below="@+id/editTextBADireccion"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewResBAvanzada"
        android:layout_below="@+id/buttonBAvanzada"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
